--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
-</div>
+
 <div class="text">
   <h1> ПУТЕШЕСТВИЕ<br>
   В ТВОЮ</h1>
@@ -16,8 +16,13 @@
   </div>
 <div class="screen1">
   <div class="homeleft">
-    <img src="img\panelka1.svg"class="panelka1">
-    <img src="img\panelka2.svg"class="panelka2">
+    <div class="panelka1">
+      <div class="rectanglewindow">
+      </div>
+  </div>
+  <div class="panelka2">
+    <img src="img\panelka2.svg">
+  </div>
     <div class="rectangle">
       <div class="windows1">
         <div class="flex">
@@ -157,15 +162,123 @@
       </div>
       </div>
   <div class="homeright">
-    <img src="img\panelka5.svg"class="panelka5">
-    <img src="img\panelka4.svg"class="panelka4">
-    <img src="img\panelka3.svg"class="panelka3">
+    <div class="panelka5">
+
+      </div>
+    <img src="img\panelka5.svg">
+  </div>
+  <div class="panelka4">
+    <img src="img\panelka4.svg">
+  </div>
+  <div class="panelka3">
+    <img src="img\panelka3.svg">
+  </div>
     <div class="rectangle3">
     </div>
+    <div class="rectangle4">
+      <div class="windows1">
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome3"></div>
+          <div class="windowhome3"></div>
+        </div>
+
+
+    </div>
   </div>
+  <div class="rectangle5">
+    <div class="windows1">
+      <div class="flex">
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+      </div>
+    </div>
+  </div>
+      <div class="rectangle6">
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+          <div class="windowhome5"></div>
+        </div>
+      </div>
+  <div>
 
 
   </div>
+</div>
+</div>
 
   </body>
 </html>
