--- a/index.html
+++ b/index.html
@@ -273,11 +273,28 @@
           <div class="windowhome5"></div>
         </div>
       </div>
-  <div>
-
-
-  </div>
 </div>
+<div class="plashka">
+ <div class="hearts">
+   <img src="img/hearts.png">
+ </div>
+ <div class="text3">
+   <h1>УРОВЕНЬ СЕРОТОНИНА</h1>
+ </div>
+ <div class="number1">
+   <img src="img/1.svg">
+ </div>
+ <div class="text4">
+   <h1>УРОВЕНЬ</h1>
+ </div>
+</div>
+<div class="screen2">
+  <div class="piccloud">
+    <img src="img/cloud.svg">
+  </div>
+  <div class="cloud1">
+  
+  </div>
 </div>
 
   </body>
