--- a/index.html
+++ b/index.html
@@ -289,11 +289,12 @@
  </div>
 </div>
 <div class="screen2">
+  <div class="cloud1">
+  </div>
   <div class="piccloud">
     <img src="img/cloud.svg">
   </div>
   <div class="cloud1">
-  
   </div>
 </div>
 
