--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
 
+
+<div class="pers">
+  <img src="img/people.svg">
+</div>
+
 <div class="text">
   <h1> ПУТЕШЕСТВИЕ<br>
   В ТВОЮ</h1>
@@ -289,14 +294,34 @@
  </div>
 </div>
 <div class="screen2">
-  <div class="cloud1">
-  </div>
+
   <div class="piccloud">
     <img src="img/cloud.svg">
   </div>
+  <div class="mainclouds">
   <div class="cloud1">
   </div>
+  <div class="cloud2">
+  </div>
+  <div class="cloud3">
+  </div>
+  <div class="cloud4">
+  </div>
 </div>
+<div class="text5">
+  <p>Для тех, кто мечтал потрогать облака.<br>
+Теперь небо еще ближе.</p>
+</div>
+<div class="text6">
+  <p>«‎Ctrl+N» помогает коснуться самых<br>
+сумасшедших мечт и желаний,<br>
+то что кажется не исполнимым может<br>
+ воплотиться благодаря погружению<br>
+в симуляцию</p>
+</div>
+</div>
+
+
 
   </body>
 </html>
