--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <div class="panelka1">
       <div class="rectanglewindow">
       </div>
+      <div class="animationwindow">
+      </div>
+      <div class="animationwindow1">
+      </div>
+      <div class="animationwindow2">
+      </div>
+      <div class="animationwindow3">
+      </div>
+      <div class="animationwindow4">
+      </div>
+      <div class="animationwindow5">
+      </div>
   </div>
   <div class="panelka2">
     <img src="img\panelka2.svg">
