--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <body>
 
 
-<div class="pers">
-  <img src="img/people.svg">
+<div class="pers"> <!-- персонаж -->
+     <img src="img/people.svg">
 </div>
 
-<div class="text">
+<div class="text"> <!-- основной текстовый блок (1 экран)-->
   <h1> ПУТЕШЕСТВИЕ<br>
   В ТВОЮ</h1>
   </div>
 <div class="text1">
   <h1>РЕАЛЬНОСТЬ</h1>
   </div>
-<div class="screen1">
-  <div class="homeleft">
-    <div class="panelka1">
+
+<div class="screen1"> <!-- 1 экран -->
+ <div class="homeleft"> <!-- дома(лево) -->
+  <div class="panelka1">
       <div class="rectanglewindow">
       </div>
       <div class="animationwindow">
@@ -38,260 +39,237 @@
       </div>
   </div>
   <div class="panelka2">
+    <div class="animationwindow6">
+    </div>
+    <div class="animationwindow7">
+    </div>
     <img src="img\panelka2.svg">
   </div>
-    <div class="rectangle">
-      <div class="windows1">
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-          <div class="windowhome"></div>
-        </div>
-        </div>
+  <div class="rectangle">
+  <div class="windows1">
+           <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+          <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+          <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+          <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+          <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+          <div class="flex">
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+            <div class="windowhome"></div>
+          </div>
+      </div>
+  </div>
+  <div class="rectangle1">
+  <div class="windows1">
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
+               <div class="flex">
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+                 <div class="windowhome1"></div>
+               </div>
     </div>
-    <div class="rectangle1">
-         <div class="windows1">
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           <div class="flex">
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-             <div class="windowhome1"></div>
-           </div>
-           </div>
     </div>
     <div class="rectangle2">
-       <div class="windows1">
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         <div class="flex">
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-           <div class="windowhome2"></div>
-         </div>
-         </div>
-      </div>
-      </div>
-  <div class="homeright">
-    <div class="panelka5">
-
-      </div>
-    <img src="img\panelka5.svg">
-  </div>
-  <div class="panelka4">
-    <img src="img\panelka4.svg">
-  </div>
-  <div class="panelka3">
-    <img src="img\panelka3.svg">
-  </div>
-    <div class="rectangle3">
-    </div>
-    <div class="rectangle4">
-      <div class="windows1">
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome3"></div>
-          <div class="windowhome3"></div>
-        </div>
-
-
-    </div>
-  </div>
-  <div class="rectangle5">
     <div class="windows1">
-      <div class="flex">
-        <div class="windowhome4"></div>
-        <div class="windowhome4"></div>
-        <div class="windowhome4"></div>
-        <div class="windowhome4"></div>
-        <div class="windowhome4"></div>
-        <div class="windowhome4"></div>
-      </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         <div class="flex">
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+           <div class="windowhome2"></div>
+         </div>
+         </div>
+   </div>
+  </div> <!-- закрытие левого блока домов -->
+
+  <div class="homeright"> <!-- дома(право) -->
+    <div class="panelka3">
+          <div class="rectanglewindowright">
+          </div>
+          <div class="rectanglewindowright1">
+          </div>
+          <div class="rectanglewindowright2">
+          </div>
     </div>
-  </div>
-      <div class="rectangle6">
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
+    <div class="panelka4">
+           <div class="rectanglewindowright3">
+           </div>
+           <div class="rectanglewindowright4">
+           </div>
+           <div class="rectanglewindowright5">
+           </div>
+    </div>
+    <div class="panelka5">
+          <div class="rectanglewindowright6">
+          </div>
+          <div class="rectanglewindowright7">
+          </div>
+          <div class="rectanglewindowright8">
+          </div>
+    </div>
+
+    <div class="rectangle3"></div>
+    <!-- дом с ховером -->
+     <div class="rectangle4">
+      <div class="windows1">
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
+            <div class="flex">
+            <div class="windowhome3"></div>
+            <div class="windowhome3"></div>
+            </div>
         </div>
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-        </div>
-        <div class="flex">
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-          <div class="windowhome5"></div>
-        </div>
-      </div>
-</div>
-<div class="plashka">
+       </div>
+     <!-- конец дом с ховером -->
+
+  </div> <!-- конец блока правых домов -->
+</div> <!--конец блока 1 экрана -->
+
+<div class="plashka"> <!--1 уровень -->
  <div class="hearts">
    <img src="img/hearts.png">
  </div>
@@ -304,7 +282,8 @@
  <div class="text4">
    <h1>УРОВЕНЬ</h1>
  </div>
-</div>
+</div> <!--конец 1 уровень-->
+
 <div class="screen2">
 
   <div class="piccloud">
