--- a/index.html
+++ b/index.html
@@ -209,10 +209,9 @@
           <div class="rectanglewindowright8">
           </div>
     </div>
-
     <div class="rectangle3"></div>
     <!-- дом с ховером -->
-     <div class="rectangle4">
+    <div class="rectangle4">
       <div class="windows1">
             <div class="flex">
             <div class="windowhome3"></div>
@@ -265,8 +264,52 @@
         </div>
        </div>
      <!-- конец дом с ховером -->
+    <div class="rectangle5">
+      <div class="windows1">
+        <div class="flex">
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        <div class="windowhome4"></div>
+        </div>
+      </div>
+    </div>
+    <div class="rectangle6">
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+        <div class="flex">
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        <div class="windowhome5"></div>
+        </div>
+    </div>
 
-  </div> <!-- конец блока правых домов -->
+   </div> <!-- конец блока правых домов -->
 </div> <!--конец блока 1 экрана -->
 
 <div class="plashka"> <!--1 уровень -->
@@ -284,7 +327,7 @@
  </div>
 </div> <!--конец 1 уровень-->
 
-<div class="screen2">
+<div class="screen2"> <!--начало блока 2 экрана -->
 
   <div class="piccloud">
     <img src="img/cloud.svg">
