--- a/index.html
+++ b/index.html
@@ -328,31 +328,65 @@
 
 <div class="screen2"> <!--начало блока 2 экрана -->
 
-  <div class="piccloud">
-    <img src="img/cloud.svg">
+  <div class="piccloud"> <!--фон -->
+  <img src="img/cloud.svg">
   </div>
-  <div class="mainclouds">
-  <div class="cloud1">
-  </div>
-  <div class="cloud2">
-  </div>
-  <div class="cloud3">
-  </div>
-  <div class="cloud4">
-  </div>
-</div>
+        <div class="mainclouds"> <!--облочка пик. -->
+        <div class="cloud1">
+        </div>
+        <div class="cloud2">
+        </div>
+        <div class="cloud3">
+        </div>
+        <div class="cloud4">
+        </div>
+        <div class="cloud5">
+        </div>
+        </div>
 <div class="text5">
   <p>Для тех, кто мечтал потрогать облака.<br>
-Теперь небо еще ближе.</p>
+  Теперь небо еще ближе.</p>
 </div>
 <div class="text6">
   <p>«‎Ctrl+N» помогает коснуться самых<br>
 сумасшедших мечт и желаний,<br>
 то что кажется не исполнимым может<br>
- воплотиться благодаря погружению<br>
+воплотиться благодаря погружению<br>
 в симуляцию</p>
 </div>
+</div> <!--конец блока 2 экрана -->
+
+<div class="plashka2">
+  <div class="hearts2">
+  <img src="img/plashkah2.png">
+  </div>
+  <div class="text7">
+    <h1>УРОВЕНЬ СЕРОТОНИНА</h1>
+  </div>
+  <div class="number2">
+    <img src="img/number2.svg">
+  </div>
+  <div class="text8">
+    <h1>УРОВЕНЬ</h1>
+  </div>
+</div> <!--2 уровень -->
+
+<div class="screen3">
+  <!--начало блока 3 экрана -->
+  <div class="section">
+    <div class="animationspace1">
+      <img src="img/spaceani1.png">
+    </div>
+
+  </div>
+
+  <div class="picspace"> <!--фон -->
+  <img src="img/space.svg">
+  </div>
+
+
 </div>
+
 
 
 
