--- a/index.html
+++ b/index.html
@@ -371,18 +371,123 @@
   </div>
 </div> <!--2 уровень -->
 
-<div class="screen3">
-  <!--начало блока 3 экрана -->
-  <div class="section">
+<div class="screen3">  <!--начало блока 3 экрана -->
+<div class="section">   <!--анимация3 -->
     <div class="animationspace1">
       <img src="img/spaceani1.png">
     </div>
+</div>
+<div class="picspace"> <!--фон -->
+<img src="img/space.svg">
+</div>
+</div> <!--конец блока 3 экрана -->
 
+<div class="plashka3">
+  <div class="hearts3">
+  <img src="img/plashkah3.png">
+  </div>
+  <div class="text9">
+    <h1>УРОВЕНЬ СЕРОТОНИНА</h1>
+  </div>
+  <div class="number3">
+    <img src="img/number3.svg">
+  </div>
+  <div class="text10">
+    <h1>УРОВЕНЬ</h1>
+  </div>
+</div> <!--3 уровень -->
+<div class="screen4"><!--начало 4 блока  экрана -->
+  <div class="shadow">
+    <img src="img/shadow.png">
+  </div>
+  <div class="oldhome">
+    <div class="oldhousewindow">
+    </div>
+    <div class="oldhousewindow1">
+    </div>
+
+    <img src="img/oldhouse.svg">
+  </div>
+  <div class="row">
+    <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+      вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+        вернуться в детство
+   </p>
+    <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+      вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+        вернуться в детство</p>
+        <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+          вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+            вернуться в детство
+       </p>
+        <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+          вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+            вернуться в детство</p>
+        <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+              вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                вернуться в детство
+        </p>
+        <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+              вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                вернуться в детство</p>
+        <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+                  вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                    вернуться в детство
+               </p>
+                <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+                  вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                    вернуться в детство</p>
+                    <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+                      вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                        вернуться в детство
+                   </p>
+                    <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+                      вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                        вернуться в детство</p>
+                        <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+                          вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                            вернуться в детство
+                       </p>
+                        <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+                          вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                            вернуться в детство</p>
+                            <p class="p1"> вернуться в детство вернуться в детство вернуться в детство
+                              вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                                вернуться в детство</p>
+                                <p class="p2"> вернуться в детство вернуться в детство вернуться в детство
+                                  вернуться в детство вернуться в детство вернуться в детство вернуться в детство
+                                    вернуться в детство</p>
+  </div>
+</div> <!--конец 4 блока  экрана -->
+<div class="plashka4">
+  <div class="hearts4">
+  <img src="img/hearts4.png">
+  </div>
+  <div class="text11">
+    <h1>УРОВЕНЬ СЕРОТОНИНА</h1>
+  </div>
+  <div class="number4">
+    <img src="img/4.svg">
+  </div>
+  <div class="text12">
+    <h1>УРОВЕНЬ</h1>
   </div>
 
-  <div class="picspace"> <!--фон -->
-  <img src="img/space.svg">
+</div>
+
+<div class="screen5">
+<div class="mountain">
+  <div class="text13">
+    <p>Покорить Эверест стало проще<br>
+и безопаснее. Если вы не могли<br>
+решиться на путешествие<br>
+в горы, то создайте его<br>
+в своем мире симуляции.</p>
   </div>
+  <img src="img/mountain.svg">
+</div>
+</div>
+<div class="futor">
 
 
 </div>
