--- a/index.html
+++ b/index.html
@@ -472,25 +472,24 @@
   <div class="text12">
     <h1>УРОВЕНЬ</h1>
   </div>
-
 </div>
-
 <div class="screen5">
-<div class="mountain">
   <div class="text13">
     <p>Покорить Эверест стало проще<br>
-и безопаснее. Если вы не могли<br>
+       и безопаснее. Если вы не могли<br>
 решиться на путешествие<br>
 в горы, то создайте его<br>
-в своем мире симуляции.</p>
+в своем мири симуляции.</p>
   </div>
-  <img src="img/mountain.svg">
+  <div class="backgroundpic">
+    <img src="img/screen5.svg">
+  </div>
 </div>
-</div>
-<div class="futor">
 
 
-</div>
+
+
+
 
 
 
