--- a/index.html
+++ b/index.html
@@ -485,6 +485,22 @@
     <img src="img/screen5.svg">
   </div>
 </div>
+<div class="futor">
+<div class="logo">
+  <img src="img/furorlogo.png">
+</div>
+  <div class="text14">
+    <p>Виолетта Браунс<br>
+Арт практика<br>
+Б21308</p>
+  </div>
+<div class="exit">
+  <img src="img/exit.png">
+</div>
+
+  </div>
+
+</div>
 
 
 
