--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">.
     <title>Ctrl+N</title>
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
@@ -11,16 +12,19 @@
 <div class="pers"> <!-- персонаж -->
      <img src="img/people.svg">
 </div>
+<div class="maintext1">
+  <div class="text"> <!-- основной текстовый блок (1 экран)-->
+    <h1> ПУТЕШЕСТВИЕ<br>
+    В ТВОЮ</h1>
+    </div>
+  <div class="text1">
+    <h1>РЕАЛЬНОСТЬ</h1>
+    </div>
+</div>
 
-<div class="text"> <!-- основной текстовый блок (1 экран)-->
-  <h1> ПУТЕШЕСТВИЕ<br>
-  В ТВОЮ</h1>
-  </div>
-<div class="text1">
-  <h1>РЕАЛЬНОСТЬ</h1>
-  </div>
 
-<div class="screen1"> <!-- 1 экран -->
+<div class="screen1">
+   <!-- 1 экран -->
  <div class="homeleft"> <!-- дома(лево) -->
   <div class="panelka1">
       <div class="rectanglewindow">
@@ -496,6 +500,7 @@
   </div>
 <div class="exit">
   <img src="img/exit.png">
+
 </div>
 
   </div>
