--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
+<div class="containerwe">
+
 
 
 <div class="pers"> <!-- персонаж -->
@@ -375,7 +377,23 @@
   </div>
 </div> <!--2 уровень -->
 
-<div class="screen3">  <!--начало блока 3 экрана -->
+<div class="screen3">
+   <!--начало блока 3 экрана -->
+   <div class="text15">
+     <h1>В ДЕТСТВЕ Я<br>
+МЕЧТАЛ СТАТЬ<br>
+КОСМОНАВТОМ</h1>
+   </div>
+   <div class="textplash">
+   </div>
+   <div class="text16">
+     <p>Тепрь детские мечты <br>
+не остаются мечтами.<br>
+Ты можешь исследовать <br>
+космос прямо сейчас.</p>
+   </div>
+   <div class="textplash1">
+   </div>
 <div class="section">   <!--анимация3 -->
     <div class="animationspace1">
       <img src="img/spaceani1.png">
@@ -514,6 +532,6 @@
 
 
 
-
+</div>
   </body>
 </html>
